# rhino-benchmarks

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  build.gradle  compare.sh  maven_install.json  run-other.sh  run.sh  settings.gradle
ARES-6/Air/: all.js  allocate_stack.js  arg.js  basic_block.js  benchmark.js  code.js  custom.js  frequented_block.js  insertion_set.js  inst.js  liveness.js  opcode.js  payload-airjs-ACLj8C.js  payload-gbemu-executeIteration.js  payload-imaging-gaussian-blur-gaussianBlur.js  payload-typescript-scanIdentifier.js  reg.js  stack_slot.js  stress-test.js  symbols.js  test.js  tmp.js  tmp_base.js  util.js
ARES-6/ml/: benchmark.js  index.js
Octane/: box2d.js  code-first-load.js  crypto.js  deltablue.js  earley-boyer.js  gbemu-part1.js  gbemu-part2.js  navier-stokes.js  pdfjs.js  raytrace.js  regexp.js  richards.js  run.js  splay.js  typescript-input.js  typescript.js
RexBench/FlightPlanner/: airways.js  benchmark.js  expectations.js  flight_planner.js  use_unicode.js
RexBench/OfflineAssembler/: InitBytecodes.js  LowLevelInterpreter.js  LowLevelInterpreter32_64.js  LowLevelInterpreter64.js  ast.js  benchmark.js  expected.js  file.js  generate_expected.js  instructions.js  parser.js  registers.js
RexBench/UniPoker/: benchmark.js  expected.js  poker.js
SeaMonster/: ai-astar.js  gaussian-blur.js  json-parse-inspector.js  json-stringify-inspector.js  sjlc.js  stanford-crypto-aes.js  stanford-crypto-pbkdf2.js  stanford-crypto-sha256.js
SunSpider/: 3d-cube.js  3d-raytrace.js  base64.js  crypto-aes.js  crypto-md5.js  crypto-sha1.js  date-format-tofte.js  date-format-xparb.js  n-body.js  regex-dna.js  string-unpack-code.js  tagcloud.js
WSL/: AddressSpace.js  All.js  AnonymousVariable.js  ArrayRefType.js  ArrayType.js  Assignment.js  AutoWrapper.js  Block.js  BoolLiteral.js  Break.js  CallExpression.js  CallFunction.js  Check.js  CheckLiteralTypes.js  CheckLoops.js  CheckRecursion.js  CheckRecursiveTypes.js  CheckReturns.js  CheckUnreachableCode.js  CheckWrapped.js  Checker.js  CloneProgram.js  CommaExpression.js  ConstexprFolder.js  ConstexprTypeParameter.js  Continue.js  ConvertPtrToArrayRefExpression.js  CreateLiteral.js  CreateLiteralType.js  DereferenceExpression.js  DoWhileLoop.js  DotExpression.js  DoubleLiteral.js  DoubleLiteralType.js  EArrayRef.js  EBuffer.js  EBufferBuilder.js  EPtr.js  EnumLiteral.js  EnumMember.js  (+113 more)
babel/: JetStreamDriver.js  Makefile  babel.config.json  package-lock.json  package.json  run-babel.sh
babel/Octane/: earley-boyer.js
bigint/: bigdenary-benchmark.js  bigdenary-bundle.js  noble-benchmark.js  noble-bls12-381-bundle.js  noble-ed25519-bundle.js  noble-secp256k1-bundle.js  paillier-benchmark.js  paillier-bundle.js  web-crypto-sham.js
cdjs/: benchmark.js  call_sign.js  collision.js  collision_detector.js  constants.js  motion.js  red_black_tree.js  reduce_collision_set.js  simulator.js  util.js  vector_2d.js  vector_3d.js
simple/: doxbee-async.js  doxbee-promise.js  hash-map.js
src/jmh/java/org/mozilla/rhino/benchmarks/: V8Benchmark.java
src/main/java/org/brail/rhinobenchmarks/: BenchmarkDriver.java  BenchmarkException.java  BenchmarkRunner.java  Compare.java  Main.java  Performance.java  PromiseWrapper.java  StandardBenchmarks.java  Utils.java
src/main/resources/: JetStreamDriver.js  start.js
src/test/java/org/brail/rhinobenchmarks/test/: StandardBenchmarkTest.java
threejs/: benchmark.js  three.js
